# pytorch_template

./: README.md  pyproject.toml
src/: factories.py
